<resources>
    <string name="usernameLineHint">Enter Username</string>
    <string name="passwordLineHint">Enter Password</string>
    <string name="loginButton">Login</string>
    <string name="forgotPassButton">Forgot Password?</string>
    <string name="userLoginTitle">Supportal</string>
    <string name="createAccountButton">Create Account</string>
    <string name="userName">User : Admin</string>
    <string name="manageAccount">Manage Account</string>
    <string name="logOut">Log Out</string>
    <string name="issueDescription">Description:</string>
    <string name="highPriority">High Priority</string>
    <string name="descriptionIssue">Description of Issue</string>
    <string name="issueTitleText">Title</string>
    <string name="submitTitle">Submit Issue</string>
    <string name="nameTxtView">Name:</string>
    <string name="enterName">Enter your name</string>
    <string name="issueTitle">Issue:</string>
    <string name="issueTitleHint">Give a subject for your issue</string>
    <string name="descriptionText">Description:</string>
    <string name="descriptionHint">Give a description of the issue</string>
    <string name="priorityText">High priority?</string>
    <string name="submitTxt">Submit Issue</string>
    <string name="welcomeTxt">Welcome!</string>
    <string name="submitIssueHint">Submit an issue to the development team</string>
    <string name="manageIssuesTitle">View Issues</string>
    <string name="chooseIssueTxt">List of current Issues:</string>
    <string name="issueDescHint"></string>
    <string name="mainPageManage">View Issues</string>
    <string name="accountCreationTxt">Account Creation</string>
    <string name="desiredUsernameTxt">Desired Username:</string>
    <string name="desiredUsernameEnter">Enter your desired username</string>
    <string name="passwordTxt">Password:</string>
    <string name="enterPasswordHint">Enter password</string>
    <string name="reenterPassTxt">Confirm Password:</string>
    <string name="createAcntPgBtn">Create Account</string>
    <string name="passChangeTxt">Password reset:</string>
    <string name="enterOldPass">Enter current password:</string>
    <string name="currentPassHint">Enter your current password</string>
    <string name="enterNewPass">Enter new desired password</string>
    <string name="confirmPassHint">Confirm new password</string>
    <string name="changePassBtn">Change Password</string>
    <string name="changeEmailTxt">Change Email:</string>
    <string name="oldEmailHint">Enter current email</string>
    <string name="enterNewEmail">Enter new email</string>
    <string name="updateInfoBtn">Update Information</string>
    <string-array name="kinds_array">
        <item>bug</item>
        <item>task</item>
        <item>proposal</item>
        <item>enhancement</item>
    </string-array>
</resources>
