<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="oaklabs.supportal.ManageUserAccount">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userAccountName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateInfoBtn"
        android:id="@+id/changeInfoBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newEmailEdit"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:hint="@string/enterNewEmail"
        android:layout_above="@+id/changeInfoBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lastNameEdit"
        android:hint="Enter new last name"
        android:layout_above="@+id/emailChangeTxt"
        android:layout_toLeftOf="@+id/changeInfoBtn"
        android:layout_toStartOf="@+id/changeInfoBtn"
        android:layout_marginBottom="23dp" />

    <TextView
        android:text="Last Name:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_above="@+id/lastNameEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="First Name:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstNameAcntView"
        android:layout_above="@+id/firstNameEdit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeEmailTxt"
        android:id="@+id/emailChangeTxt"
        android:layout_above="@+id/newEmailEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstNameEdit"
        android:hint="Enter new first name"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="First Name:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userAccountName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/firstNameDisp"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/emailDisp"
        android:maxLines="1"
        android:text="Current Email:"
        android:layout_below="@+id/lastNameDisp"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/lastNameDisp"
        android:text="Last Name:"
        android:layout_below="@+id/firstNameDisp"
        android:textSize="18dp"/>

</RelativeLayout>
